--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,13 @@
 }
 
 @font-face {
-  font-family: 'Kumar One';
-  src: url(/fonts/KumarOne-Regular.ttf);
+  font-family: "Bebas Neue";
+  src: url(/fonts/BebasNeue-Regular.ttf);
 }
 
 @font-face {
-  font-family: "Bebas Neue";
-  src: url(/fonts/BebasNeue-Regular.ttf);
+  font-family: "Daruma Drop";
+  src: url(/fonts/DarumadropOne-Regular.ttf);
 }
 
 ::-webkit-scrollbar {
