--- a/src/pages/User.css
+++ b/src/pages/User.css
@@ -37,6 +37,12 @@
     color: #EEEEEE;
 }
 
+.user-chrips {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 5%;
+}
+
 @media (min-width: 500px) {
     .user-container {
         flex-direction: row;
